// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NamedDefinition 1`] = `
{
  "@": {
    "end": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "identifier": {
    "@": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "NamedDefinition",
  "typeTag": {
    "@": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "kind": "TypeTag",
    "optional": false,
    "typeExpression": {
      "@": {
        "end": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "start": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
      },
      "kind": "TypeIdentifier",
      "value": "number",
    },
  },
}
`;

exports[`NamedLiteral 1`] = `
{
  "@": {
    "end": {
      "column": 5,
      "line": 1,
      "offset": 4,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "expression": {
    "@": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
    },
    "kind": "NumberLiteral",
    "value": 5,
  },
  "identifier": {
    "@": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "NamedLiteral",
}
`;

exports[`NamedRecordDefinitionGroup 1`] = `
{
  "@": {
    "end": {
      "column": 6,
      "line": 6,
      "offset": 91,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "identifier": {
    "@": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
    },
    "kind": "TypeIdentifier",
    "value": "Card",
  },
  "kind": "NamedRecordDefinitionGroup",
  "namedRecordDefinitions": [
    {
      "@": {
        "end": {
          "column": 13,
          "line": 2,
          "offset": 27,
        },
        "start": {
          "column": 7,
          "line": 2,
          "offset": 21,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 11,
            "line": 2,
            "offset": 25,
          },
          "start": {
            "column": 7,
            "line": 2,
            "offset": 21,
          },
        },
        "kind": "TypeIdentifier",
        "value": "King",
      },
      "kind": "NamedRecordDefinition",
      "record": {
        "@": {
          "end": {
            "column": 13,
            "line": 2,
            "offset": 27,
          },
          "start": {
            "column": 11,
            "line": 2,
            "offset": 25,
          },
        },
        "definitions": [],
        "kind": "RecordDefinition",
      },
    },
    {
      "@": {
        "end": {
          "column": 14,
          "line": 3,
          "offset": 42,
        },
        "start": {
          "column": 7,
          "line": 3,
          "offset": 35,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 12,
            "line": 3,
            "offset": 40,
          },
          "start": {
            "column": 7,
            "line": 3,
            "offset": 35,
          },
        },
        "kind": "TypeIdentifier",
        "value": "Queen",
      },
      "kind": "NamedRecordDefinition",
      "record": {
        "@": {
          "end": {
            "column": 14,
            "line": 3,
            "offset": 42,
          },
          "start": {
            "column": 12,
            "line": 3,
            "offset": 40,
          },
        },
        "definitions": [],
        "kind": "RecordDefinition",
      },
    },
    {
      "@": {
        "end": {
          "column": 13,
          "line": 4,
          "offset": 56,
        },
        "start": {
          "column": 7,
          "line": 4,
          "offset": 50,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 11,
            "line": 4,
            "offset": 54,
          },
          "start": {
            "column": 7,
            "line": 4,
            "offset": 50,
          },
        },
        "kind": "TypeIdentifier",
        "value": "Jack",
      },
      "kind": "NamedRecordDefinition",
      "record": {
        "@": {
          "end": {
            "column": 13,
            "line": 4,
            "offset": 56,
          },
          "start": {
            "column": 11,
            "line": 4,
            "offset": 54,
          },
        },
        "definitions": [],
        "kind": "RecordDefinition",
      },
    },
    {
      "@": {
        "end": {
          "column": 0,
          "line": 6,
          "offset": 85,
        },
        "start": {
          "column": 7,
          "line": 5,
          "offset": 64,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 13,
            "line": 5,
            "offset": 70,
          },
          "start": {
            "column": 7,
            "line": 5,
            "offset": 64,
          },
        },
        "kind": "TypeIdentifier",
        "value": "Number",
      },
      "kind": "NamedRecordDefinition",
      "record": {
        "@": {
          "end": {
            "column": 0,
            "line": 6,
            "offset": 85,
          },
          "start": {
            "column": 13,
            "line": 5,
            "offset": 70,
          },
        },
        "definitions": [
          {
            "@": {
              "end": {
                "column": 27,
                "line": 5,
                "offset": 84,
              },
              "start": {
                "column": 14,
                "line": 5,
                "offset": 71,
              },
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 19,
                  "line": 5,
                  "offset": 76,
                },
                "start": {
                  "column": 14,
                  "line": 5,
                  "offset": 71,
                },
              },
              "kind": "ValueIdentifier",
              "value": "value",
            },
            "kind": "NamedDefinition",
            "typeTag": {
              "@": {
                "end": {
                  "column": 27,
                  "line": 5,
                  "offset": 84,
                },
                "start": {
                  "column": 19,
                  "line": 5,
                  "offset": 76,
                },
              },
              "kind": "TypeTag",
              "optional": false,
              "typeExpression": {
                "@": {
                  "end": {
                    "column": 27,
                    "line": 5,
                    "offset": 84,
                  },
                  "start": {
                    "column": 21,
                    "line": 5,
                    "offset": 78,
                  },
                },
                "kind": "TypeIdentifier",
                "value": "number",
              },
            },
          },
        ],
        "kind": "RecordDefinition",
      },
    },
  ],
}
`;

exports[`NamedRecordDefinitionStatement 1`] = `
{
  "@": {
    "end": {
      "column": 34,
      "line": 1,
      "offset": 33,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "NamedRecordDefinitionStatement",
  "methods": null,
  "namedRecordDefinition": {
    "@": {
      "end": {
        "column": 34,
        "line": 1,
        "offset": 33,
      },
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "identifier": {
      "@": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
      },
      "kind": "TypeIdentifier",
      "value": "Point",
    },
    "kind": "NamedRecordDefinition",
    "record": {
      "@": {
        "end": {
          "column": 34,
          "line": 1,
          "offset": 33,
        },
        "start": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
      },
      "definitions": [
        {
          "@": {
            "end": {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
            "start": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
              "start": {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
            },
            "kind": "ValueIdentifier",
            "value": "x",
          },
          "kind": "NamedDefinition",
          "typeTag": {
            "@": {
              "end": {
                "column": 22,
                "line": 1,
                "offset": 21,
              },
              "start": {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
            },
            "kind": "TypeTag",
            "optional": false,
            "typeExpression": {
              "@": {
                "end": {
                  "column": 22,
                  "line": 1,
                  "offset": 21,
                },
                "start": {
                  "column": 16,
                  "line": 1,
                  "offset": 15,
                },
              },
              "kind": "TypeIdentifier",
              "value": "number",
            },
          },
        },
        {
          "@": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
              "start": {
                "column": 24,
                "line": 1,
                "offset": 23,
              },
            },
            "kind": "ValueIdentifier",
            "value": "y",
          },
          "kind": "NamedDefinition",
          "typeTag": {
            "@": {
              "end": {
                "column": 33,
                "line": 1,
                "offset": 32,
              },
              "start": {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
            },
            "kind": "TypeTag",
            "optional": false,
            "typeExpression": {
              "@": {
                "end": {
                  "column": 33,
                  "line": 1,
                  "offset": 32,
                },
                "start": {
                  "column": 27,
                  "line": 1,
                  "offset": 26,
                },
              },
              "kind": "TypeIdentifier",
              "value": "number",
            },
          },
        },
      ],
      "kind": "RecordDefinition",
    },
  },
}
`;

exports[`NamedRecordDefinitionStatement.empty 1`] = `
{
  "@": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "NamedRecordDefinitionStatement",
  "methods": null,
  "namedRecordDefinition": {
    "@": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "identifier": {
      "@": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
      },
      "kind": "TypeIdentifier",
      "value": "True",
    },
    "kind": "NamedRecordDefinition",
    "record": {
      "@": {
        "end": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "start": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
      },
      "definitions": [],
      "kind": "RecordDefinition",
    },
  },
}
`;

exports[`NamedRecordDefinitionStatement.withMethods 1`] = `
{
  "@": {
    "end": {
      "column": 30,
      "line": 1,
      "offset": 29,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "NamedRecordDefinitionStatement",
  "methods": {
    "@": {
      "end": {
        "column": 30,
        "line": 1,
        "offset": 29,
      },
      "start": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
    },
    "kind": "NamedRecordDefinitionMethodBlock",
    "methods": [
      {
        "@": {
          "end": {
            "column": 28,
            "line": 1,
            "offset": 27,
          },
          "start": {
            "column": 20,
            "line": 1,
            "offset": 19,
          },
        },
        "argument": {
          "@": {
            "end": {
              "column": 25,
              "line": 1,
              "offset": 24,
            },
            "start": {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
          },
          "definitions": [],
          "kind": "RecordDefinition",
        },
        "block": {
          "@": {
            "end": {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
            "start": {
              "column": 26,
              "line": 1,
              "offset": 25,
            },
          },
          "kind": "Block",
          "statements": [],
        },
        "identifier": {
          "@": {
            "end": {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
          },
          "kind": "ValueIdentifier",
          "value": "set",
        },
        "kind": "MethodDefinition",
        "returnType": null,
      },
    ],
  },
  "namedRecordDefinition": {
    "@": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "identifier": {
      "@": {
        "end": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "start": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
      },
      "kind": "TypeIdentifier",
      "value": "Foo",
    },
    "kind": "NamedRecordDefinition",
    "record": {
      "@": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
      },
      "definitions": [],
      "kind": "RecordDefinition",
    },
  },
}
`;

exports[`NamedRecordDefinitionStatement.withMethods2 1`] = `
{
  "@": {
    "end": {
      "column": 8,
      "line": 7,
      "offset": 176,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "NamedRecordDefinitionStatement",
  "methods": {
    "@": {
      "end": {
        "column": 8,
        "line": 7,
        "offset": 176,
      },
      "start": {
        "column": 9,
        "line": 4,
        "offset": 81,
      },
    },
    "kind": "NamedRecordDefinitionMethodBlock",
    "methods": [
      {
        "@": {
          "end": {
            "column": 39,
            "line": 5,
            "offset": 126,
          },
          "start": {
            "column": 9,
            "line": 5,
            "offset": 96,
          },
        },
        "argument": {
          "@": {
            "end": {
              "column": 36,
              "line": 5,
              "offset": 123,
            },
            "start": {
              "column": 12,
              "line": 5,
              "offset": 99,
            },
          },
          "definitions": [
            {
              "@": {
                "end": {
                  "column": 22,
                  "line": 5,
                  "offset": 109,
                },
                "start": {
                  "column": 13,
                  "line": 5,
                  "offset": 100,
                },
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 14,
                    "line": 5,
                    "offset": 101,
                  },
                  "start": {
                    "column": 13,
                    "line": 5,
                    "offset": 100,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "t",
              },
              "kind": "NamedDefinition",
              "typeTag": {
                "@": {
                  "end": {
                    "column": 22,
                    "line": 5,
                    "offset": 109,
                  },
                  "start": {
                    "column": 14,
                    "line": 5,
                    "offset": 101,
                  },
                },
                "kind": "TypeTag",
                "optional": false,
                "typeExpression": {
                  "@": {
                    "end": {
                      "column": 22,
                      "line": 5,
                      "offset": 109,
                    },
                    "start": {
                      "column": 16,
                      "line": 5,
                      "offset": 103,
                    },
                  },
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
              },
            },
            {
              "@": {
                "end": {
                  "column": 35,
                  "line": 5,
                  "offset": 122,
                },
                "start": {
                  "column": 24,
                  "line": 5,
                  "offset": 111,
                },
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 25,
                    "line": 5,
                    "offset": 112,
                  },
                  "start": {
                    "column": 24,
                    "line": 5,
                    "offset": 111,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "u",
              },
              "kind": "NamedDefinition",
              "typeTag": {
                "@": {
                  "end": {
                    "column": 35,
                    "line": 5,
                    "offset": 122,
                  },
                  "start": {
                    "column": 25,
                    "line": 5,
                    "offset": 112,
                  },
                },
                "kind": "TypeTag",
                "optional": false,
                "typeExpression": {
                  "@": {
                    "end": {
                      "column": 35,
                      "line": 5,
                      "offset": 122,
                    },
                    "start": {
                      "column": 27,
                      "line": 5,
                      "offset": 114,
                    },
                  },
                  "kind": "TypeIdentifier",
                  "value": "TimeUnit",
                },
              },
            },
          ],
          "kind": "RecordDefinition",
        },
        "block": {
          "@": {
            "end": {
              "column": 39,
              "line": 5,
              "offset": 126,
            },
            "start": {
              "column": 37,
              "line": 5,
              "offset": 124,
            },
          },
          "kind": "Block",
          "statements": [],
        },
        "identifier": {
          "@": {
            "end": {
              "column": 12,
              "line": 5,
              "offset": 99,
            },
            "start": {
              "column": 9,
              "line": 5,
              "offset": 96,
            },
          },
          "kind": "ValueIdentifier",
          "value": "set",
        },
        "kind": "MethodDefinition",
        "returnType": null,
      },
      {
        "@": {
          "end": {
            "column": 0,
            "line": 7,
            "offset": 168,
          },
          "start": {
            "column": 9,
            "line": 6,
            "offset": 136,
          },
        },
        "argument": {
          "@": {
            "end": {
              "column": 15,
              "line": 6,
              "offset": 142,
            },
            "start": {
              "column": 13,
              "line": 6,
              "offset": 140,
            },
          },
          "definitions": [],
          "kind": "RecordDefinition",
        },
        "block": {
          "@": {
            "end": {
              "column": 0,
              "line": 7,
              "offset": 168,
            },
            "start": {
              "column": 39,
              "line": 6,
              "offset": 166,
            },
          },
          "kind": "Block",
          "statements": [],
        },
        "identifier": {
          "@": {
            "end": {
              "column": 13,
              "line": 6,
              "offset": 140,
            },
            "start": {
              "column": 9,
              "line": 6,
              "offset": 136,
            },
          },
          "kind": "ValueIdentifier",
          "value": "unit",
        },
        "kind": "MethodDefinition",
        "returnType": {
          "@": {
            "end": {
              "column": 39,
              "line": 6,
              "offset": 166,
            },
            "start": {
              "column": 15,
              "line": 6,
              "offset": 142,
            },
          },
          "kind": "TypeTag",
          "optional": false,
          "typeExpression": {
            "@": {
              "end": {
                "column": 39,
                "line": 6,
                "offset": 166,
              },
              "start": {
                "column": 17,
                "line": 6,
                "offset": 144,
              },
            },
            "kind": "BinaryTypeOperation",
            "left": {
              "@": {
                "end": {
                  "column": 27,
                  "line": 6,
                  "offset": 154,
                },
                "start": {
                  "column": 17,
                  "line": 6,
                  "offset": 144,
                },
              },
              "kind": "StringLiteral",
              "value": "seconds",
            },
            "operator": "|",
            "right": {
              "@": {
                "end": {
                  "column": 39,
                  "line": 6,
                  "offset": 166,
                },
                "start": {
                  "column": 29,
                  "line": 6,
                  "offset": 156,
                },
              },
              "kind": "StringLiteral",
              "value": "puleses",
            },
          },
        },
      },
    ],
  },
  "namedRecordDefinition": {
    "@": {
      "end": {
        "column": 8,
        "line": 4,
        "offset": 80,
      },
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "identifier": {
      "@": {
        "end": {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
      },
      "kind": "TypeIdentifier",
      "value": "TimelinePoint",
    },
    "kind": "NamedRecordDefinition",
    "record": {
      "@": {
        "end": {
          "column": 8,
          "line": 4,
          "offset": 80,
        },
        "start": {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
      },
      "definitions": [
        {
          "@": {
            "end": {
              "column": 18,
              "line": 2,
              "offset": 38,
            },
            "start": {
              "column": 9,
              "line": 2,
              "offset": 29,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 10,
                "line": 2,
                "offset": 30,
              },
              "start": {
                "column": 9,
                "line": 2,
                "offset": 29,
              },
            },
            "kind": "ValueIdentifier",
            "value": "t",
          },
          "kind": "NamedDefinition",
          "typeTag": {
            "@": {
              "end": {
                "column": 18,
                "line": 2,
                "offset": 38,
              },
              "start": {
                "column": 10,
                "line": 2,
                "offset": 30,
              },
            },
            "kind": "TypeTag",
            "optional": false,
            "typeExpression": {
              "@": {
                "end": {
                  "column": 18,
                  "line": 2,
                  "offset": 38,
                },
                "start": {
                  "column": 12,
                  "line": 2,
                  "offset": 32,
                },
              },
              "kind": "TypeIdentifier",
              "value": "number",
            },
          },
        },
        {
          "@": {
            "end": {
              "column": 7,
              "line": 4,
              "offset": 79,
            },
            "start": {
              "column": 9,
              "line": 3,
              "offset": 48,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 10,
                "line": 3,
                "offset": 49,
              },
              "start": {
                "column": 9,
                "line": 3,
                "offset": 48,
              },
            },
            "kind": "ValueIdentifier",
            "value": "u",
          },
          "kind": "NamedDefinition",
          "typeTag": {
            "@": {
              "end": {
                "column": 7,
                "line": 4,
                "offset": 79,
              },
              "start": {
                "column": 10,
                "line": 3,
                "offset": 49,
              },
            },
            "kind": "TypeTag",
            "optional": false,
            "typeExpression": {
              "@": {
                "end": {
                  "column": 7,
                  "line": 4,
                  "offset": 79,
                },
                "start": {
                  "column": 12,
                  "line": 3,
                  "offset": 51,
                },
              },
              "kind": "BinaryTypeOperation",
              "left": {
                "@": {
                  "end": {
                    "column": 22,
                    "line": 3,
                    "offset": 61,
                  },
                  "start": {
                    "column": 12,
                    "line": 3,
                    "offset": 51,
                  },
                },
                "kind": "StringLiteral",
                "value": "seconds",
              },
              "operator": "|",
              "right": {
                "@": {
                  "end": {
                    "column": 7,
                    "line": 4,
                    "offset": 79,
                  },
                  "start": {
                    "column": 24,
                    "line": 3,
                    "offset": 63,
                  },
                },
                "kind": "StringLiteral",
                "value": "puleses",
              },
            },
          },
        },
      ],
      "kind": "RecordDefinition",
    },
  },
}
`;

exports[`NamedRecordLiteral 1`] = `
{
  "@": {
    "end": {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "identifier": {
    "@": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "TypeIdentifier",
    "value": "Point",
  },
  "kind": "NamedRecordLiteral",
  "recordLiteral": {
    "@": {
      "end": {
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
    },
    "definitions": [
      {
        "@": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
          },
          "kind": "NumberLiteral",
          "value": 5,
        },
        "identifier": {
          "@": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "kind": "ValueIdentifier",
          "value": "x",
        },
        "kind": "NamedLiteral",
      },
      {
        "@": {
          "end": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
            "start": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
          },
          "kind": "NumberLiteral",
          "value": 3,
        },
        "identifier": {
          "@": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
          },
          "kind": "ValueIdentifier",
          "value": "y",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
}
`;

exports[`NamedRecordLiteral.nestedIdentifier 1`] = `
{
  "@": {
    "end": {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "identifier": {
    "@": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "NestedTypeIdentifier",
    "path": [
      {
        "@": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "kind": "TypeIdentifier",
        "value": "Card",
      },
      {
        "@": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "kind": "TypeIdentifier",
        "value": "King",
      },
    ],
  },
  "kind": "NamedRecordLiteral",
  "recordLiteral": {
    "@": {
      "end": {
        "column": 22,
        "line": 1,
        "offset": 21,
      },
      "start": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "definitions": [
      {
        "@": {
          "end": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
          "start": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
            "start": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
          },
          "kind": "NumberLiteral",
          "value": 5,
        },
        "identifier": {
          "@": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
          },
          "kind": "ValueIdentifier",
          "value": "x",
        },
        "kind": "NamedLiteral",
      },
      {
        "@": {
          "end": {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
          "start": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
            "start": {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
          },
          "kind": "NumberLiteral",
          "value": 3,
        },
        "identifier": {
          "@": {
            "end": {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "start": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
          },
          "kind": "ValueIdentifier",
          "value": "y",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
}
`;

exports[`NestedTypeIdentifier 1`] = `
{
  "@": {
    "end": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "NestedTypeIdentifier",
  "path": [
    {
      "@": {
        "end": {
          "column": 5,
          "line": 1,
          "offset": 4,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "kind": "TypeIdentifier",
      "value": "Card",
    },
    {
      "@": {
        "end": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "start": {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
      },
      "kind": "TypeIdentifier",
      "value": "King",
    },
  ],
}
`;

exports[`RecordDefinition 1`] = `
{
  "@": {
    "end": {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "definitions": [
    {
      "@": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "kind": "ValueIdentifier",
        "value": "x",
      },
      "kind": "NamedDefinition",
      "typeTag": {
        "@": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "kind": "TypeTag",
        "optional": false,
        "typeExpression": {
          "@": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "kind": "TypeIdentifier",
          "value": "number",
        },
      },
    },
    {
      "@": {
        "end": {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
        "start": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "kind": "ValueIdentifier",
        "value": "y",
      },
      "kind": "NamedDefinition",
      "typeTag": {
        "@": {
          "end": {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
          "start": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
        },
        "kind": "TypeTag",
        "optional": false,
        "typeExpression": {
          "@": {
            "end": {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
            "start": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
          },
          "kind": "TypeIdentifier",
          "value": "number",
        },
      },
    },
  ],
  "kind": "RecordDefinition",
}
`;

exports[`RecordLiteral 1`] = `
{
  "@": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "definitions": [
    {
      "@": {
        "end": {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
        "start": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "kind": "NumberLiteral",
        "value": 5,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "kind": "ValueIdentifier",
        "value": "x",
      },
      "kind": "NamedLiteral",
    },
    {
      "@": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "kind": "NumberLiteral",
        "value": 3,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
        },
        "kind": "ValueIdentifier",
        "value": "y",
      },
      "kind": "NamedLiteral",
    },
  ],
  "kind": "RecordLiteral",
}
`;

exports[`RecordLiteral.long 1`] = `
{
  "@": {
    "end": {
      "column": 4,
      "line": 9,
      "offset": 109,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "definitions": [
    {
      "@": {
        "end": {
          "column": 11,
          "line": 2,
          "offset": 12,
        },
        "start": {
          "column": 5,
          "line": 2,
          "offset": 6,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 11,
            "line": 2,
            "offset": 12,
          },
          "start": {
            "column": 10,
            "line": 2,
            "offset": 11,
          },
        },
        "kind": "NumberLiteral",
        "value": 3,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 8,
            "line": 2,
            "offset": 9,
          },
          "start": {
            "column": 5,
            "line": 2,
            "offset": 6,
          },
        },
        "kind": "ValueIdentifier",
        "value": "num",
      },
      "kind": "NamedLiteral",
    },
    {
      "@": {
        "end": {
          "column": 0,
          "line": 9,
          "offset": 105,
        },
        "start": {
          "column": 5,
          "line": 3,
          "offset": 18,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 0,
            "line": 9,
            "offset": 105,
          },
          "start": {
            "column": 10,
            "line": 3,
            "offset": 23,
          },
        },
        "definitions": [
          {
            "@": {
              "end": {
                "column": 13,
                "line": 4,
                "offset": 37,
              },
              "start": {
                "column": 7,
                "line": 4,
                "offset": 31,
              },
            },
            "expression": {
              "@": {
                "end": {
                  "column": 13,
                  "line": 4,
                  "offset": 37,
                },
                "start": {
                  "column": 12,
                  "line": 4,
                  "offset": 36,
                },
              },
              "kind": "NumberLiteral",
              "value": 2,
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 10,
                  "line": 4,
                  "offset": 34,
                },
                "start": {
                  "column": 7,
                  "line": 4,
                  "offset": 31,
                },
              },
              "kind": "ValueIdentifier",
              "value": "num",
            },
            "kind": "NamedLiteral",
          },
          {
            "@": {
              "end": {
                "column": 18,
                "line": 5,
                "offset": 56,
              },
              "start": {
                "column": 7,
                "line": 5,
                "offset": 45,
              },
            },
            "expression": {
              "@": {
                "end": {
                  "column": 18,
                  "line": 5,
                  "offset": 56,
                },
                "start": {
                  "column": 12,
                  "line": 5,
                  "offset": 50,
                },
              },
              "kind": "StringLiteral",
              "value": "this",
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 10,
                  "line": 5,
                  "offset": 48,
                },
                "start": {
                  "column": 7,
                  "line": 5,
                  "offset": 45,
                },
              },
              "kind": "ValueIdentifier",
              "value": "str",
            },
            "kind": "NamedLiteral",
          },
          {
            "@": {
              "end": {
                "column": 17,
                "line": 6,
                "offset": 74,
              },
              "start": {
                "column": 7,
                "line": 6,
                "offset": 64,
              },
            },
            "expression": {
              "@": {
                "end": {
                  "column": 17,
                  "line": 6,
                  "offset": 74,
                },
                "start": {
                  "column": 13,
                  "line": 6,
                  "offset": 70,
                },
              },
              "kind": "BooleanLiteral",
              "value": true,
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 11,
                  "line": 6,
                  "offset": 68,
                },
                "start": {
                  "column": 7,
                  "line": 6,
                  "offset": 64,
                },
              },
              "kind": "ValueIdentifier",
              "value": "bool",
            },
            "kind": "NamedLiteral",
          },
          {
            "@": {
              "end": {
                "column": 0,
                "line": 8,
                "offset": 99,
              },
              "start": {
                "column": 7,
                "line": 7,
                "offset": 82,
              },
            },
            "expression": {
              "@": {
                "end": {
                  "column": 0,
                  "line": 8,
                  "offset": 99,
                },
                "start": {
                  "column": 12,
                  "line": 7,
                  "offset": 87,
                },
              },
              "definitions": [
                {
                  "@": {
                    "end": {
                      "column": 17,
                      "line": 7,
                      "offset": 92,
                    },
                    "start": {
                      "column": 13,
                      "line": 7,
                      "offset": 88,
                    },
                  },
                  "expression": {
                    "@": {
                      "end": {
                        "column": 17,
                        "line": 7,
                        "offset": 92,
                      },
                      "start": {
                        "column": 16,
                        "line": 7,
                        "offset": 91,
                      },
                    },
                    "kind": "NumberLiteral",
                    "value": 3,
                  },
                  "identifier": {
                    "@": {
                      "end": {
                        "column": 14,
                        "line": 7,
                        "offset": 89,
                      },
                      "start": {
                        "column": 13,
                        "line": 7,
                        "offset": 88,
                      },
                    },
                    "kind": "ValueIdentifier",
                    "value": "x",
                  },
                  "kind": "NamedLiteral",
                },
                {
                  "@": {
                    "end": {
                      "column": 23,
                      "line": 7,
                      "offset": 98,
                    },
                    "start": {
                      "column": 19,
                      "line": 7,
                      "offset": 94,
                    },
                  },
                  "expression": {
                    "@": {
                      "end": {
                        "column": 23,
                        "line": 7,
                        "offset": 98,
                      },
                      "start": {
                        "column": 22,
                        "line": 7,
                        "offset": 97,
                      },
                    },
                    "kind": "NumberLiteral",
                    "value": 3,
                  },
                  "identifier": {
                    "@": {
                      "end": {
                        "column": 20,
                        "line": 7,
                        "offset": 95,
                      },
                      "start": {
                        "column": 19,
                        "line": 7,
                        "offset": 94,
                      },
                    },
                    "kind": "ValueIdentifier",
                    "value": "y",
                  },
                  "kind": "NamedLiteral",
                },
              ],
              "kind": "RecordLiteral",
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 10,
                  "line": 7,
                  "offset": 85,
                },
                "start": {
                  "column": 7,
                  "line": 7,
                  "offset": 82,
                },
              },
              "kind": "ValueIdentifier",
              "value": "rec",
            },
            "kind": "NamedLiteral",
          },
        ],
        "kind": "RecordLiteral",
      },
      "identifier": {
        "@": {
          "end": {
            "column": 8,
            "line": 3,
            "offset": 21,
          },
          "start": {
            "column": 5,
            "line": 3,
            "offset": 18,
          },
        },
        "kind": "ValueIdentifier",
        "value": "rec",
      },
      "kind": "NamedLiteral",
    },
  ],
  "kind": "RecordLiteral",
}
`;
